# victor

./: .gitignore  LICENSE  LICENSING_REQUEST.md  Makefile  README.md  README_EN.md  pyproject.toml  requirements.txt  run_batch.py
training/: README.md
victor/: __init__.py  annotation_writer.py  anonymizer.py  gap_collector.py  gap_validator.py  log_processor.py  ner_extractor.py  rule_writer.py
victor/config/: custom_rules_security.json
victor/engine/: __init__.py  audit.py  custom_rules_processor.py  engine.py  ner_processor.py  replacement_generator.py  replacer.py  spacy_engine.py  utils.py
